Fix padding spacing

--- a/app/assets/stylesheets/api/song_show.scss
+++ b/app/assets/stylesheets/api/song_show.scss
@@ -53,6 +53,7 @@
     font-family:  Verdana, Tahoma, sans-serif;
     padding-top: 6px;
     padding-left: 4px;
+    padding-bottom: 6px;
     padding-right: 4px;
 }
 .user-top-artist {
